2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/base_fs.c, libcsupport/src/rtems_mkdir.c: Formatting.

2010-07-30	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1645/cpukit
	* libcsupport/src/getuid.c: Moved setuid() routine to its own
	file.
	* libcsupport/src/setuid.c: New file with setuid() routine.
	* libcsupport/src/seteuid.c: New file with seteuid() routine.

2010-07-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/fstat.c, libcsupport/src/rmdir.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_creat.c,
	libfs/src/imfs/imfs_debug.c, libfs/src/imfs/imfs_getchild.c,
	libfs/src/imfs/memfile.c: Add IMFS_assert. Clean up and remove all
	checks which are redundant with system call layer. Formatting.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* posix/src/psignalunblockthread.c, posix/src/pthreadkill.c,
	rtems/src/signalsend.c, score/include/rtems/score/percpu.h,
	score/inline/rtems/score/thread.inl, score/src/thread.c,
	score/src/threadchangepriority.c, score/src/threadclearstate.c,
	score/src/threaddispatch.c, score/src/threadready.c,
	score/src/threadresume.c, score/src/threadsetstate.c,
	score/src/threadstartmultitasking.c, score/src/threadsuspend.c,
	score/src/threadyieldprocessor.c: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.

2010-07-30	Vinu Rajashekhar <vinutheraj@gmail.com>

	* sapi/include/confdefs.h: Add configuration macros for Go
	requirements.

2010-07-29	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1620/cpukit
	* libcsupport/src/privateenv.c: Significant clean up and rework to
	improve testability.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* sapi/src/exinit.c, score/Makefile.am, score/preinstall.am,
	score/include/rtems/score/bitfield.h,
	score/include/rtems/score/priority.h,
	score/include/rtems/score/thread.h,
	score/inline/rtems/score/priority.inl,
	score/inline/rtems/score/thread.inl,